--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -12053,6 +12053,7 @@ reassign=Прехвърлите (Automatic Translation)
 reassign-task=Повторно възложена задача (Automatic Translation)
 reassign-to-system-role=Повторното завлачене на роля на системата (Automatic Translation)
 reassignment=Пренасочване (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Льо Тоса (Automatic Translation)
 reauthenticate=Реаним (Automatic Translation)
 recalculate=Преизчисляване (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Скрипт
 script-file=Скриптов файл (Automatic Translation)
 script-language=Скриптов език (Automatic Translation)
 scripted-assignment=Задача със скрипт (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Скриптиран получател (Automatic Translation)
 scroll=свитък (Automatic Translation)
 scrolling=Превъртане (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Избор на продуктова група (Automatic 
 select-question=Изберете въпрос (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Изберете "Повторно задаване", за да опитате отново. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Изберете получатели
 select-region=Избор на регион (Automatic Translation)
 select-role=Избор на роля (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Изберете шаб
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Изберете доставчика на карти, който ще използвате при показване на геолокализирани активи. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Изберете нивото на страница на навигационното меню. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Изберете типа на рейтингите за следните приложения. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Изберете обхвата на действието, което тази роля може да изпълни върху всеки ресурс от <em>{0}</em> портлет.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Изберете обхвата на действието, което тази роля може да изпълни върху портала.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Изберете обхвата на действието, което тази роля може да изпълни върху <em>{0}</em>.
