--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -12055,6 +12055,7 @@ reassign=Torna a assignar
 reassign-task=Reassigna la tasca
 reassign-to-system-role=Torna-ho a assignar al rol del sistema
 reassignment=Reassignació
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumur
 reauthenticate=Torna a autenticar
 recalculate=Torna a calcular
@@ -12897,6 +12898,7 @@ script=Guió
 script-file=Fitxer script
 script-language=Idioma de la seqüència
 scripted-assignment=Assignació generada per seqüències
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinatari generat per seqüències
 scroll=Desplaçament
 scrolling=Desplaçament
@@ -13216,6 +13218,7 @@ select-product-group=Seleccioneu un grup de productes
 select-question=Seleccioneu una pregunta
 select-radius=Seleccioneu el radi
 select-reassign-to-retry=Seleccioneu "Reassigna" per reintentar-ho.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Seleccioneu els destinataris
 select-region=Selecciona una regió
 select-role=Selecciona un rol
@@ -13251,6 +13254,7 @@ select-the-form-template-used-to-add-records-to-the-list=Seleccioneu la plantill
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Seleccioneu l'API del proveïdor de mapes que s'ha d'utilitzar quan es mostren els continguts geolocalitzats.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Seleccioneu el nivell de pàgina del menú de navegació que voleu mostrar.
 select-the-ratings-type-for-the-following-applications=Seleccioneu el tipus de valoracions per les següents aplicacions.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Seleccioneu l'abast de l'acció que aquest rol pot realitzar en cada recurs del mòdul de portal <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Seleccioneu l'abast de l'acció que aquest rol pot realitzar sobre el mòdul de portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Seleccioneu l'abast de l'acció que aquest rol pot realitzar sobre <em>{0}</em>.
