--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -12053,6 +12053,7 @@ reassign=Reassign (Automatic Copy)
 reassign-task=Tildel opgave igen (Automatic Translation)
 reassign-to-system-role=Reassign to System Rolle
 reassignment=Omplacering (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Copy)
 reauthenticate=Genautenticate (Automatic Translation)
 recalculate=Recalculate (Automatic Copy)
@@ -12895,6 +12896,7 @@ script=Script (Automatic Copy)
 script-file=Scriptfil (Automatic Translation)
 script-language=Scriptsprog (Automatic Translation)
 scripted-assignment=Scriptet tildeling (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scriptet modtager (Automatic Translation)
 scroll=rulle (Automatic Translation)
 scrolling=Rulle (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Vælg produktgruppe (Automatic Translation)
 select-question=Select Question (Automatic Copy)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Vælg 'Tildel igen' for at prøve igen. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Vælg modtagere
 select-region=Vælg område (Automatic Translation)
 select-role=Vælg rolle (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Vælg the detail templa
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Vælg den API-udbyder af tilknytninger, der skal bruges, når geolokaliserede aktiver vises. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Vælg sideniveauet i den navigationsmenu, der skal vises. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Vælg klassifikationstypen for følgende programmer. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Vælg the scope of the action that this role can perform on each resource of the <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Vælg the scope of the action that this role can perform on the portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Vælg the scope of the action that this role can perform on the <em>{0}</em>.
