--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -12055,6 +12055,7 @@ reassign=Wieder zuweisen
 reassign-task=Aufgabe neu zuweisen
 reassign-to-system-role=Wieder der Systemrolle zuweisen
 reassignment=Neuzuordnung
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumur
 reauthenticate=Erneut authentisieren
 recalculate=Neu berechnen
@@ -12897,6 +12898,7 @@ script=Skript
 script-file=Scriptdatei
 script-language=Scriptsprache
 scripted-assignment=Zuweisung durch Script
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptbasierter Empfänger
 scroll=Scrollen
 scrolling=Scrollen
@@ -13216,6 +13218,7 @@ select-product-group=Produktgruppe auswählen
 select-question=Frage auswählen
 select-radius=Radius auswählen
 select-reassign-to-retry=Wählen Sie 'Neu zuweisen", um es erneut zu versuchen.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Empfänger auswählen
 select-region=Wählen Sie die Region aus
 select-role=Rolle auswählen
@@ -13251,6 +13254,7 @@ select-the-form-template-used-to-add-records-to-the-list=Wählen Sie die Formula
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Anbieter der Karten-API auswählen, der benutzt werden soll, um Geolokalisierte Inhalte anzuzeigen.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Wählen Sie die Seitenebene des Navigationsmenüs, die angezeigt werden soll.
 select-the-ratings-type-for-the-following-applications=Wählen Sie den Bewertungstyp der folgenden Anwendungen.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Geltungsbereich der Aktionen auswählen, die diese Rolle auf jeder Ressource des <em>{0}</em> Portlets ausführen darf.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Geltungsbereich der Aktionen auswählen, die diese Rolle am Portal durchführen darf.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Geltungsbereich der Aktion auswählen, die diese Rolle in <em>{0}</em> ausführen darf.
