--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -12053,6 +12053,7 @@ reassign=Επανεκχώρηση
 reassign-task=Εκ νέου ανάθεση εργασίας (Automatic Translation)
 reassign-to-system-role=Επανεκχώρηση στο ρόλο συστήματος
 reassignment=Επανατοποθέτηση (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Βιογραφικό (Automatic Translation)
 reauthenticate=Επαναευρεθνοθητικό (Automatic Translation)
 recalculate=Επανυπολογισμός
@@ -12895,6 +12896,7 @@ script=script
 script-file=Αρχείο δέσμης ενεργειών (Automatic Translation)
 script-language=Γλώσσα δέσμης ενεργειών (Automatic Translation)
 scripted-assignment=Ανάθεση με δέσμες ενεργειών (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Παραλήπτης με δέσμες ενεργειών (Automatic Translation)
 scroll=ρόλος (Automatic Translation)
 scrolling=Κύλιση (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Επιλογή ομάδας προϊόντων (Automatic T
 select-question=Επιλογή ερώτησης
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Επιλέξτε "Εκ νέου εκχώρηση" για να επαναλάβετε τη διατρήση. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Επιλογή παραληπτών
 select-region=Επιλογή περιοχής (Automatic Translation)
 select-role=Επιλογή ρόλου (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Επιλογή προτ
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Επιλέξτε την υπηρεσία παροχής API χαρτών που θα χρησιμοποιήσετε κατά την εμφάνιση γεωεντοπισμένων στοιχείων. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Επιλέξτε το επίπεδο σελίδας του μενού περιήγησης που θα εμφανιστεί. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Επιλέξτε τον τύπο χαρακτηρισμών για τις ακόλουθες εφαρμογές. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Επιλογή εμβέλειας ενεργειών που αυτός ο ρόλος μπορεί να εκτελέσει σε κάθε πόρο του portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Επιλογή εμβέλειας ενεργειών που αυτός ο ρόλος μπορεί να εκτελέσει στο portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Επιλογή εμβέλειας ενεργειών που αυτός ο ρόλος μπορεί να εκτελέσει στο <em>{0}</em>.
