--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -12053,6 +12053,7 @@ reassign=Reassign (Automatic Copy)
 reassign-task=Reassign Task (Automatic Copy)
 reassign-to-system-role=Reassign to System Role (Automatic Copy)
 reassignment=Reassignment (Automatic Copy)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Copy)
 reauthenticate=Reauthenticate (Automatic Copy)
 recalculate=Recalculate (Automatic Copy)
@@ -12895,6 +12896,7 @@ script=Script (Automatic Copy)
 script-file=Script File (Automatic Copy)
 script-language=Script Language (Automatic Copy)
 scripted-assignment=Scripted Assignment (Automatic Copy)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scripted Recipient (Automatic Copy)
 scroll=Scroll (Automatic Copy)
 scrolling=Scrolling (Automatic Copy)
@@ -13214,6 +13216,7 @@ select-product-group=Select Product Group (Automatic Copy)
 select-question=Select Question (Automatic Copy)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Select 'Reassign' to retry. (Automatic Copy)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Select Recipients (Automatic Copy)
 select-region=Select Region (Automatic Copy)
 select-role=Select Role (Automatic Copy)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Select the form templat
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Select the maps API provider to use when displaying geolocalized assets. (Automatic Copy)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Select the page level of the navigation menu to be displayed. (Automatic Copy)
 select-the-ratings-type-for-the-following-applications=Select the ratings type for the following applications. (Automatic Copy)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Select the scope of the action that this role can perform on each resource of the <em>{0}</em> portlet. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Select the scope of the action that this role can perform on the portal. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Select the scope of the action that this role can perform on the <em>{0}</em>. (Automatic Copy)
