--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -12055,6 +12055,7 @@ reassign=Reasignar
 reassign-task=Reasignar tarea
 reassign-to-system-role=Reasignar a rol del sistema
 reassignment=Reasignación
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumur
 reauthenticate=Volver a autenticar
 recalculate=Recalcular
@@ -12897,6 +12898,7 @@ script=Script
 script-file=Archivo de script
 script-language=Lenguaje de script
 scripted-assignment=Asignación generada por scripts
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinatario generado por scripts
 scroll=Desplazamiento
 scrolling=Desplazamiento
@@ -13216,6 +13218,7 @@ select-product-group=Seleccionar grupo de productos
 select-question=Seleccionar pregunta
 select-radius=Seleccionar radio
 select-reassign-to-retry=Para volver a intentarlo, seleccione «Reasignar».
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Seleccionar destinatarios
 select-region=Seleccionar región
 select-role=Seleccionar rol
@@ -13251,6 +13254,7 @@ select-the-form-template-used-to-add-records-to-the-list=Seleccionar la plantill
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Seleccione el proveedor de la API de mapas que se usará para mostrar activos geolocalizados.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Seleccione el nivel de página del menú de navegación que se mostrará.
 select-the-ratings-type-for-the-following-applications=Seleccione el tipo de valoraciones para las siguientes aplicaciones.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Seleccione el ámbito de la acción que este rol permite llevar a cabo en cada recurso del portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Seleccione el ámbito de la acción que este rol permite llevar a cabo en cada recurso del portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Seleccione el ámbito de la acción que este rol puede llevar a cabo en <em>{0}</em>.
