--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -12053,6 +12053,7 @@ reassign=اختصاص مجدد
 reassign-task=واگذاری مجدد وظیفه (Automatic Translation)
 reassign-to-system-role=اختصاص مجدد نقش سیستم
 reassignment=تغییر جنسیت (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Reauthenticate (Automatic Translation)
 recalculate=محاسبه دوباره
@@ -12895,6 +12896,7 @@ script=اسکریپت
 script-file=فایل اسکریپت
 script-language=زبان اسکریپت (Automatic Translation)
 scripted-assignment=واگذاری اسکریپتی (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=گیرنده اسکریپتی (Automatic Translation)
 scroll=حرکت (Automatic Translation)
 scrolling=اسکرول
@@ -13214,6 +13216,7 @@ select-product-group=انتخاب گروه محصول (Automatic Translation)
 select-question=انتخاب سوال
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry="تغییر جنسیت" را برای بازآموزی انتخاب کنید. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=انتخاب دریافت کننده ها
 select-region=انتخاب منطقه (Automatic Translation)
 select-role=انتخاب نقش (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=انتخاب الگوی
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=ارائه دهنده نقشه API برای استفاده کردن از آن زمانیکه منابع geolocalized نمایش داده می‌شوند را انتخاب کنید.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=سطح صفحه منوی پیمایش را انتخاب کنید تا نمایش داده شود. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=نوع رتبه‌بندی اعتبار پیش فرض را برای برنامه های کاربردی زیر انتخاب کنید.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=محدوده‌ی فعالیتی که این نقش می‌تواند روی هر منبع پورتلت <em>{0}</em> انجام دهد را انتخاب نمایید.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=انتخاب محدوده فعالیتی که این نقش می‌تواند در پرتال نمایش دهد.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=محدوده‌ی فعالیتی که این نقش می‌تواند روی <em>{0}</em> انجام دهد را انتخاب نمایید.
