--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -12052,6 +12052,7 @@ reassign=Määritä uudelleen
 reassign-task=Määritä Tehtävä Uudelleen
 reassign-to-system-role=Määritä uudellleen systeemi rooliin.
 reassignment=Uudelleennimeäminen
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure
 reauthenticate=Todenna uudelleen
 recalculate=Laske uudelleen
@@ -12894,6 +12895,7 @@ script=Skripti
 script-file=Skripti-tiedosto
 script-language=Komentosarjakieli
 scripted-assignment=Komentosarjatehtävä
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Komentosarjaohjattu Vastaanottaja
 scroll=Vieritä
 scrolling=Vieritys
@@ -13213,6 +13215,7 @@ select-product-group=Valitse Tuoteryhmä
 select-question=Valitse kysymys
 select-radius=Valitse säde
 select-reassign-to-retry=Valitse "Määritä uudelleen" yrittääksesi uudelleen.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Valitse vastaanottajat
 select-region=Valitse Alue
 select-role=Valitse Rooli
@@ -13248,6 +13251,7 @@ select-the-form-template-used-to-add-records-to-the-list=Valitse lomakemalli lis
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Valitse kartan API-tarjoaja ja käytä sitä näyttämään maantieteellisesti sijoitetut sisällöt.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Valitse näytettävän navigointivalikon sivutaso.
 select-the-ratings-type-for-the-following-applications=Syötä arvostelutyyppi seuraaville sovelluksille.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Valitse roolin laajuus toiminnolle, jonka tämä rooli voi suorittaa jokaiselle resurssille portletissa <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Valitse toiminnon laajuus, jonka tämä rooli saa suorittaa portaalille.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Valitse roolin laajuus toiminnolle, jonka tämä rooli voi tehdä <em>{0}:lle</em>.
