--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -12055,6 +12055,7 @@ reassign=Attribuez à nouveau
 reassign-task=Affecter à nouveau la tâche
 reassign-to-system-role=Attribuez à nouveau au rôle de système
 reassignment=Réaffectation
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure
 reauthenticate=Réauthentifier
 recalculate=Recalculez
@@ -12897,6 +12898,7 @@ script=Script
 script-file=Fichier de script
 script-language=Langue du Script
 scripted-assignment=Affectation scriptée
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinataire scripté
 scroll=Défilement
 scrolling=Défilement
@@ -13216,6 +13218,7 @@ select-product-group=Sélectionner un groupe de produits
 select-question=Sélectionner une question
 select-radius=Sélectionner le rayon
 select-reassign-to-retry=Sélectionnez 'Affecter à nouveau' pour réessayer.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Choisir les destinataires
 select-region=Sélectionner une région
 select-role=Sélectionner un rôle
@@ -13251,6 +13254,7 @@ select-the-form-template-used-to-add-records-to-the-list=Sélectionner le modèl
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Sélectionner le fournisseur d'API de plans pour utiliser lors de l'affichage d'assets géolocalisés.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Sélectionnez le niveau de page du menu de navigation à afficher.
 select-the-ratings-type-for-the-following-applications=Sélectionner le type de notation pour les applications suivantes.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Sélectionner la portée de l'action que ce rôle peut effectuer sur chaque ressource de l'application <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Sélectionner la portée de l'action que ce rôle peut effectuer sur le portail.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Sélectionner la portée que l'action que ce rôle peut effectuer sur le <em>{0}</em>.
