--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -12056,6 +12056,7 @@ reassign=Újból kijelöl
 reassign-task=Feladat ismételt hozzárendelése
 reassign-to-system-role=Rendszer szerepkör újbóli kijelölése
 reassignment=Ismételt hozzárendelés
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure
 reauthenticate=Újra hitelesíteni
 recalculate=Újraszámol
@@ -12898,6 +12899,7 @@ script=Szkript
 script-file=Szkript fájl
 script-language=Parancsfájl nyelve
 scripted-assignment=Hozzárendelés parancsfájllal
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Címzett parancsfájllal
 scroll=Görgetés
 scrolling=Görgetés
@@ -13217,6 +13219,7 @@ select-product-group=Termékcsoport kiválasztása
 select-question=Kérdés kiválasztása
 select-radius=Sugár kiválasztása
 select-reassign-to-retry=Újrapróbálkozáshoz válassza az "Átirányítás" lehetőséget.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Címzettek kijelölése
 select-region=Térség kiválasztása
 select-role=Szerepkör kiválasztása
@@ -13252,6 +13255,7 @@ select-the-form-template-used-to-add-records-to-the-list=Válaszd ki az űrlap s
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Válassza ki az akkor használandó térkép API szolgáltatót, amikor földrajzi területhez kapcsolódó tartalmakat kell megjeleníteni.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Válassza ki a megjelenítendő navigációs menü oldalszintjét.
 select-the-ratings-type-for-the-following-applications=Válaszd ki az értékelési típust a következő portletek számára.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Válaszd ki a szerepkör által végrehajtható művelet hatókörét a(z) <em>{0}</em> portlet egyes erőforrásain.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Válaszd ki a szerepkör által végrehajtható művelet hatókörét a portálon.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Válaszd ki a szerepkör által végrehajtható művelet hatókörét itt: <em>{0}</em>.
