--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -12053,6 +12053,7 @@ reassign=Menugaskan kembali
 reassign-task=Tetapkan Ulang Tugas (Automatic Translation)
 reassign-to-system-role=Reassign ke Peran Sistem
 reassignment=Penetapan ulang (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Autentikasi ulang (Automatic Translation)
 recalculate=Hitung Ulang
@@ -12895,6 +12896,7 @@ script=Skrip
 script-file=Berkas Skrip (Automatic Translation)
 script-language=Bahasa Skrip (Automatic Translation)
 scripted-assignment=Penetapan Bernaskah (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Penerima Berskrip (Automatic Translation)
 scroll=Gulir (Automatic Translation)
 scrolling=Bergulir (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Pilih Grup Produk (Automatic Translation)
 select-question=Pilih Pertanyaan
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Pilih 'Tetapkan ulang' untuk mencoba kembali. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Pilih Penerima
 select-region=Pilih Kawasan (Automatic Translation)
 select-role=Pilih Peran (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Pilih template rinci di
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Pilih penyedia API peta yang akan digunakan saat menampilkan aset geolokalisasi. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Pilih tingkat halaman menu navigasi yang akan ditampilkan. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Pilih tipe peringkat untuk aplikasi berikut ini. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Pilih ruang lingkup tindakan bahwa peran ini dapat melakukan setiap Resource <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Pilih ruang lingkup tindakan yang dapat melakukan peran ini di halaman portal ini.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Pilih ruang lingkup tindakan bahwa peran ini dapat dilakukan pada <em>{0}</em>.
