--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -12054,6 +12054,7 @@ reassign=Riassegna
 reassign-task=Riassegna attività (Automatic Translation)
 reassign-to-system-role=Riassegna al ruolo del sistema
 reassignment=riassegnazione (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Riautenticare (Automatic Translation)
 recalculate=Ricalcola
@@ -12896,6 +12897,7 @@ script=Script
 script-file=File Script
 script-language=Linguaggio script (Automatic Translation)
 scripted-assignment=Assegnazione con script (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinatario con script (Automatic Translation)
 scroll=scorrere (Automatic Translation)
 scrolling=Scorrimento
@@ -13215,6 +13217,7 @@ select-product-group=Seleziona gruppo di prodotti (Automatic Translation)
 select-question=Seleziona Domanda
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Selezionare 'Riassegna' per riprovare. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Seleziona Destinatari
 select-region=Seleziona una Regione
 select-role=Seleziona ruolo (Automatic Translation)
@@ -13250,6 +13253,7 @@ select-the-form-template-used-to-add-records-to-the-list=Seleziona il modello de
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Seleziona il provider della API delle mappe da usare per la visualizzazione delle risorse geolocalizzate.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Selezionare il livello di pagina del menu di spostamento da visualizzare. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Seleziona il tipo di punteggi per le seguenti applicazioni.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Seleziona l'ambito dell'azione che questo ruolo può effettuare su ogni risorsa del portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Seleziona l'ambito dell'azione che questo ruolo può realizzare sul portale.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Seleziona l'ambito dell'azione che questo ruolo può effettuare su <em>{0}</em>.
