--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -12053,6 +12053,7 @@ reassign=הקצה מחדש
 reassign-task=הקצה מחדש משימה (Automatic Translation)
 reassign-to-system-role=הקצה מחדש לתפקיד מערכת
 reassignment=הקצאה חוזרת
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=קורות מיון (Automatic Translation)
 reauthenticate=לאיתר מחדש (Automatic Translation)
 recalculate=חשב מחדש
@@ -12895,6 +12896,7 @@ script=תסריט
 script-file=קובץ סקריפט
 script-language=שפת סקריפט
 scripted-assignment=הקצאה באמצעות סקריפט
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=נמען באמצעות סקריפט
 scroll=לגלול (Automatic Translation)
 scrolling=גלילה
@@ -13214,6 +13216,7 @@ select-product-group=בחר קבוצת מוצרים (Automatic Translation)
 select-question=בחר שאלה
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=בחר 'הקצאה מחדש' כדי לנסות שנית. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=בחר מקבלים
 select-region=בחר אזור (Automatic Translation)
 select-role=בחר תפקיד (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=בחר את תבנית 
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=בחר את ספק API המפות שבו יעשה שימוש להצגת נכסים עם איכון גאוגרפי.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=בחר את רמת הדף של תפריט הניווט שיוצג. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=בחר את סוג הדירוג עבור היישומים הבאים.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=בחר טווח הפעילות שהתפקיד הזה יכול לבצע בכל משאב של פורטלט <em>{0}</em>
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=בחר טווח הפעילות שהתפקיד הזה יכול לבצע בפורטל
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=סמן תחום הפעילות שהתפקיד הזה יכול לבצע ב-<em>{0}</em>.
