--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -12053,6 +12053,7 @@ reassign=재할당하십시오
 reassign-task=작업 재할당 (Automatic Translation)
 reassign-to-system-role=체계 역할에 재할당하십시오
 reassignment=재지정 (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=레오메레 (Automatic Translation)
 reauthenticate=재인증 (Automatic Translation)
 recalculate=새로 고침 (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=원본
 script-file=스크립트 파일 (Automatic Translation)
 script-language=스크립트 언어 (Automatic Translation)
 scripted-assignment=스크립트 할당 (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=스크립트 수신자 (Automatic Translation)
 scroll=스크롤 (Automatic Translation)
 scrolling=스크롤 (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=제품 그룹 선택 (Automatic Translation)
 select-question=질문 선택 (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=다시 시도할 '재할당'을 선택합니다. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=수령인을 선정하십시요
 select-region=리전 선택 (Automatic Translation)
 select-role=역할 선택
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=목록에 레코드를 
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=지리적으로 지정된 자산을 표시할 때 사용할 맵 API 공급자를 선택합니다. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=표시할 탐색 메뉴의 페이지 수준을 선택합니다. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=다음 응용 프로그램에 대한 등급 유형을 선택합니다. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Select the scope of the action that this role can perform on each resource of the <em>{0}</em> portlet. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=이 역할이 문에 실행할 수 있는 활동의 범위를 선정하십시요.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Select the scope of the action that this role can perform on the <em>{0}</em>. (Automatic Copy)
