--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -12053,6 +12053,7 @@ reassign=Priskyrimas iš naujo (Automatic Translation)
 reassign-task=Iš naujo priskirti užduotį (Automatic Translation)
 reassign-to-system-role=Iš naujo priskirti sistemos vaidmeniui (Automatic Translation)
 reassignment=Priskyrimas iš naujo (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=CV (Automatic Translation)
 reauthenticate=Reauthenticate (Pakartotinis aauthenticatas) (Automatic Translation)
 recalculate=Perskaičiuoti (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Scenarijų (Automatic Translation)
 script-file=Scenarijaus failas (Automatic Translation)
 script-language=Scenarijaus kalba (Automatic Translation)
 scripted-assignment=Scenarijaus priskyrimas (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scenarijaus gavėjas (Automatic Translation)
 scroll=slinkti (Automatic Translation)
 scrolling=Slinkties (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Pasirinkti produktų grupę (Automatic Translation)
 select-question=Pasirinkti klausimą (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Pasirinkite "Priskirti iš naujo", kad bandykite dar kartą. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Pasirinkti gavėjus (Automatic Translation)
 select-region=Pasirinkti regioną (Automatic Translation)
 select-role=Pasirinkti vaidmenį (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Pasirinkite formos šab
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Pasirinkite žemėlapių API teikėją, kuris bus naudojamas rodant geolokacinį turtą. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Pasirinkite rodomo naršymo meniu puslapio lygį. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Pasirinkite šių programų vertinimo tipą. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Select the scope of the action that this role can perform on each resource of the <em>{0}</em> portlet. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Pasirinkti veiksmo, kurį šis vaidmuo gali atlikti portale, aprėptį. (Automatic Translation)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Select the scope of the action that this role can perform on the <em>{0}</em>. (Automatic Copy)
