--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -12053,6 +12053,7 @@ reassign=Tilordne
 reassign-task=Tilordne oppgave på nytt (Automatic Translation)
 reassign-to-system-role=Tilordne til systemrolle
 reassignment=Reassignment (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Autoriser på nytt (Automatic Translation)
 recalculate=Rekalkuler
@@ -12895,6 +12896,7 @@ script=Skript
 script-file=Skript-fil
 script-language=Språk for skript (Automatic Translation)
 scripted-assignment=Skriptet tildeling (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptet mottaker (Automatic Translation)
 scroll=Bla (Automatic Translation)
 scrolling=Skrolling
@@ -13214,6 +13216,7 @@ select-product-group=Velg Produktgruppe (Automatic Translation)
 select-question=Velg spørsmål
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Velg Tilordne på nytt for å prøve på nytt. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Velg mottakere
 select-region=Velg område (Automatic Translation)
 select-role=Velg rolle (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Velg skjemamalen som sk
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Velg kartleverandøren som skal vises når ressurser geolokaliseres.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Velg sidenivået for navigasjonsmenyen som skal vises. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Velg rangeringstypen for følgende applikasjoner.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Velg virkeområdet til handlingen denne rollen kan bruke på hver ressurs av <em>{0}</em> portletet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Velg virkeområdet til handlingen denne rollen kan bruke på portalen.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Velg virkeområdet til handligen denne rollen kan bruke på <em>{0}</em>.
