--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -12056,6 +12056,7 @@ reassign=Opnieuw toewijzen
 reassign-task=Taak opnieuw toewijzen
 reassign-to-system-role=Opnieuw aan systeemrol toewijzen
 reassignment=Nieuwe toewijzing
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumur
 reauthenticate=Opnieuw authenticeren
 recalculate=Opnieuw berekenen
@@ -12898,6 +12899,7 @@ script=Script
 script-file=Scriptbestand
 script-language=Scripttaal
 scripted-assignment=Gescripte Toewijzing
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Gescripte Geadresseerde
 scroll=Scrollen
 scrolling=Scrollen
@@ -13217,6 +13219,7 @@ select-product-group=Productgroep selecteren
 select-question=Vraag selecteren
 select-radius=Radius selecteren
 select-reassign-to-retry=Selecteer 'Opnieuw toewijzen' om opnieuw te proberen.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Ontvangers selecteren
 select-region=Selecteer regio
 select-role=Rol selecteren
@@ -13252,6 +13255,7 @@ select-the-form-template-used-to-add-records-to-the-list=De formuliersjabloon se
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Selecteer de aanbieder van de kaart-API die gebruikt zal worden voor de geolocalisatie van content.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Selecteer het paginaniveau van het weer te geven navigatiemenu.
 select-the-ratings-type-for-the-following-applications=Selecteer het type waarderingen voor de volgende toepassingen.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Het bereik selecteren van de actie die deze rol mag uitvoeren op elke resource van de <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Het bereik selecteren van de actie die deze rol mag uitvoeren op de portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Het bereik selecteren van de actie die deze rol mag uitvoeren op de <em>{0}</em>.
