--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -12056,6 +12056,7 @@ reassign=Opnieuw toewijzen
 reassign-task=Reassign Task (Automatic Copy)
 reassign-to-system-role=Opnieuw aan systeemrol toewijzen
 reassignment=Reassignment (Automatic Copy)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Copy)
 reauthenticate=Reauthenticate (Automatic Copy)
 recalculate=Opnieuw berekenen
@@ -12898,6 +12899,7 @@ script=Script (Automatic Copy)
 script-file=Script File (Automatic Copy)
 script-language=Script Language (Automatic Copy)
 scripted-assignment=Scripted Assignment (Automatic Copy)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scripted Recipient (Automatic Copy)
 scroll=Scroll (Automatic Copy)
 scrolling=Scrolling (Automatic Copy)
@@ -13217,6 +13219,7 @@ select-product-group=Select Product Group (Automatic Copy)
 select-question=Vraag selecteren
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Select 'Reassign' to retry. (Automatic Copy)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Selecteer ontvangers
 select-region=Select Region (Automatic Copy)
 select-role=Select Role (Automatic Copy)
@@ -13252,6 +13255,7 @@ select-the-form-template-used-to-add-records-to-the-list=De detailsjabloon selec
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Select the maps API provider to use when displaying geolocalized assets. (Automatic Copy)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Select the page level of the navigation menu to be displayed. (Automatic Copy)
 select-the-ratings-type-for-the-following-applications=Select the ratings type for the following applications. (Automatic Copy)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Selecteer het bereik van de actie die deze rol kan uitvoeren op elk bron van de <em>{0}</em> portlet.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecteer het bereik van de actie die deze rol op het portaal kan uitvoeren.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecteer het bereik van de actie die deze rol kan uitvoeren op de <em>{0}</em>.
