--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -12053,6 +12053,7 @@ reassign=Reatribuir
 reassign-task=Reatribuir Tarefa
 reassign-to-system-role=Reatribuir à função de sistema
 reassignment=Reatribuição
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure
 reauthenticate=Autenticar novamente
 recalculate=Recalcular
@@ -12895,6 +12896,7 @@ script=Script
 script-file=Script
 script-language=Linguagem de script
 scripted-assignment=Atribuição de script
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinatário com script
 scroll=Rolagem
 scrolling=Rolagem
@@ -13214,6 +13216,7 @@ select-product-group=Selecionar grupo de produto
 select-question=Selecionar pergunta
 select-radius=Selecionar raio
 select-reassign-to-retry=Selecionar "Retribuir" para tentar novamente.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Selecionar destinatários
 select-region=Selecionar Região
 select-role=Selecionar Função
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Selecione o modelo de f
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Selecione o mecanismo de API de mapas a ser usado para exibir conteúdos. geolocalizados.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Selecione o nível de página do menu de navegação a ser exibido.
 select-the-ratings-type-for-the-following-applications=Selecione o tipo de avaliações para as seguintes aplicações.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Selecionar o escopo da ação que esta função pode realizar em cada recurso do portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecionar o escopo da ação que esta função podem realizar no portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecionar o escopo da ação que esta função pode realizar em <em>{0}</em>.
