--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -12055,6 +12055,7 @@ reassign=Reatribuir
 reassign-task=Tarefa de redesignação (Automatic Translation)
 reassign-to-system-role=Reatribuir para Role de Sistema
 reassignment=Redesignação (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Rreaumure=Rreaumure=Réaumureeacute;aumureeacute;aumure
 reauthenticate=Reauthenticate (Automatic Translation)
 recalculate=Recalcular
@@ -12897,6 +12898,7 @@ script=Script
 script-file=Script
 script-language=Linguagem de script
 scripted-assignment=Atribuição roteirizada (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinatário roteirizado (Automatic Translation)
 scroll=rolar (Automatic Translation)
 scrolling=Rolagem (Automatic Translation)
@@ -13216,6 +13218,7 @@ select-product-group=Selecione o Grupo de Produtos (Automatic Translation)
 select-question=Selecionar Pergunta
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Selecione 'Redesignar' para tentar novamente. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Selecionar Destinatários
 select-region=Selecione Região (Automatic Translation)
 select-role=Selecione a função (Automatic Translation)
@@ -13251,6 +13254,7 @@ select-the-form-template-used-to-add-records-to-the-list=Selecione o template de
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Selecione a API do fornecedor de mapas a utilizar quando apresentado recursos geo-localizados.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Selecione o nível de página do menu de navegação a ser exibido. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Selecione o tipo de avaliações para as seguintes aplicações.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Selecionar o âmbito da ação que este role pode efetuar em cada recurso da portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecionar o âmbito da ação que este role pode efetuar no portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecionar o âmbito da ação que este role pode efetuar em <em>{0}</em>.
