--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -12053,6 +12053,7 @@ reassign=Motivatie
 reassign-task=Reatribuire activitate (Automatic Translation)
 reassign-to-system-role=Motivatie pentru Rolul de Sistem
 reassignment=Reassignment (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Reauthenticate (Automatic Translation)
 recalculate=Recalculare
@@ -12895,6 +12896,7 @@ script=Script (Automatic Translation)
 script-file=Fișier script (Automatic Translation)
 script-language=Limbă script (Automatic Translation)
 scripted-assignment=Atribuire scriptată (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Destinatar scriptat (Automatic Translation)
 scroll=derula (Automatic Translation)
 scrolling=Defilare (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Selectare grup de produse (Automatic Translation)
 select-question=Selectare întrebare (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Selectați "Reatribuire" pentru a reîncerca. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Selecteaza Recipienti
 select-region=Selectare regiune (Automatic Translation)
 select-role=Selectare rol (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Selectați șablonul fo
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Selectați furnizorul de API-ul hărți de utilizat la afișarea activelor geolocalizate. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Selectați nivelul paginii din meniul de navigare de afișat. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Selectați tipul de rating pentru următoarele aplicații. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Selecteaza intinderea actiunii pe care acest rol o poate efectua pe fiecare resursa a portalului <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecteaza intinderea actiunii pe care acest rol o poate efectua pe fiecare resursa a portalului.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecteaza intinderea actiunii pe care acest rol o poate efectua pe ele <em>{0}</em>.
