--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -12053,6 +12053,7 @@ reassign=Preradiť
 reassign-task=Preradenie úlohy (Automatic Translation)
 reassign-to-system-role=Preradiť systémovej roly
 reassignment=Preradenie (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Životopis (Automatic Translation)
 reauthenticate=Opätovné overenie (Automatic Translation)
 recalculate=Prepočítať
@@ -12895,6 +12896,7 @@ script=Skript
 script-file=Skriptový súbor
 script-language=Jazyk skriptu (Automatic Translation)
 scripted-assignment=Skriptované priradenie (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptovaný príjemca (Automatic Translation)
 scroll=zvitok (Automatic Translation)
 scrolling=Rolovanie (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Vyberte skupinu produktov (Automatic Translation)
 select-question=Vybrať otázku
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Ak chcete to skúsiť znova, vyberte možnosť Znova priradiť. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Vybrať adresátov
 select-region=Vybrať oblasť (Automatic Translation)
 select-role=Vybrať rolu (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Vyberte šablónu formu
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Vyberte si poskytovateľa mapového rozhrania keď sa zobrazujú geolokalizované príspevky.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Vyberte úroveň strany v navigačnej ponuke, ktorá sa má zobraziť. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Vyberte typ hodnotenia pre nasledovné aplikácie.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Vyberte oblasť pre akciu, ktorú táto rola môže vykonať na každom zdroji <em>{0}</em> portletu.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Vyberte oblasť pre akciu, ktorú táto rola môže vykonať na portáli.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Vyberte oblasť pre akciu, ktorú táto rola môže vykonať na <em>{0}</em>.
