--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -12053,6 +12053,7 @@ reassign=Ponovno doseji (Automatic Translation)
 reassign-task=Ponovno dodeli opravilo (Automatic Translation)
 reassign-to-system-role=Preislaj v sistemsko vlogo (Automatic Translation)
 reassignment=prerazporeditev (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Reauthenticate (Automatic Translation)
 recalculate=Preračuna (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Skript
 script-file=Skriptna datoteka (Automatic Translation)
 script-language=Jezik skripta (Automatic Translation)
 scripted-assignment=Skriptna dodelitev (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptni prejemnik (Automatic Translation)
 scroll=drseti (Automatic Translation)
 scrolling=Drsenja (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Izberite skupino izdelkov (Automatic Translation)
 select-question=Izberite vprašanje (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Izberite »Ponovno dodeli«. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Izberi prejemnike
 select-region=Izberite regijo (Automatic Translation)
 select-role=Izberi vlogo (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Izberite predlogo obraz
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Izberite ponudnika api zemljevidov, ki ga želite uporabiti pri prikazu geolokaliziranih sredstev. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Izberite raven strani v meniju za krmarjenje, ki ga želite prikazati. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Izberite vrsto ocen za te aplikacije. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Izberite območje akcije, ki jo lahko ta vloga izvede na vsakem viru portleta <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Izberite območje akcije, ki jo lahko ta vloga izvede na portalu.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Izberite območje akcije, ki jo lahko ta vloga izvede na <em>{0}</em>.
