--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -12053,6 +12053,7 @@ reassign=Omfördela
 reassign-task=Tilldela uppgiften igen
 reassign-to-system-role=Tilldela om till systemroll
 reassignment=Omtilldelning
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumur
 reauthenticate=Återautentisera
 recalculate=Beräkna om
@@ -12895,6 +12896,7 @@ script=Skript
 script-file=Skriptfil
 script-language=Skriptspråk
 scripted-assignment=Skriptbaserat uppdrag
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptbaserad mottagare
 scroll=Bläddra
 scrolling=Bläddring
@@ -13214,6 +13216,7 @@ select-product-group=Välj produktgrupp
 select-question=Välj fråga
 select-radius=Välj radie
 select-reassign-to-retry=Välj 'Tilldela igen' och försök igen.
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Välj mottagare
 select-region=Välj region
 select-role=Välj roll
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Välj formulär att anv
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Välj API-provider för kartor att använda för att visa geolokaliserade tillgångar.
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Välj sidnivån i navigeringsmenyn som visas.
 select-the-ratings-type-for-the-following-applications=Välj typ av omdöme för följande applikationer.
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Välj omfång för funktionen som denna roll kan utföra på varje resurs i <em>{0}</em>-portleten.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Välj omfång för aktiviteten som denna roll kan utföra på portalen.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Välj omfång för aktiviteten som denna roll kan utföra på <em>{0}</em>.
