--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -12053,6 +12053,7 @@ reassign=Перепризначати (Automatic Translation)
 reassign-task=Перепризначити завдання (Automatic Translation)
 reassign-to-system-role=Перепризначити системній ролі (Automatic Translation)
 reassignment=Перепризначення (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Реюр (значення) (Automatic Translation)
 reauthenticate=Реаутентикате (рід) (Automatic Translation)
 recalculate=Переобчислення (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Скрипт
 script-file=Файл сценарію (Automatic Translation)
 script-language=Мова сценаріїв (Automatic Translation)
 scripted-assignment=Призначення за сценарієм (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Одержувач сценарію (Automatic Translation)
 scroll=Прокручування (Automatic Translation)
 scrolling=Прокручування (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Виберіть групу продуктів (Automatic T
 select-question=Вибрати запитання (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Натисніть кнопку "Перепризначити", щоб повторити спробу. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Виберіть отримувачів
 select-region=Вибір області (Automatic Translation)
 select-role=Вибір ролі (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Виберіть шаб
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Виберіть постачальника API карт, який використовуватиметься для відображення геолокалізованих активів. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Виберіть рівень сторінки навігаційного меню для відображення. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Виберіть тип оцінювання для таких застосунків. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Виберіть набір дій, які може виконувати ця роль над кожним ресурсом портлету <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Виберіть набір дій, які може виконувати ця роль у порталі.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Виберіть набір дій, які може виконувати ця роль над <em>{0}</em>.
