--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -12053,6 +12053,7 @@ reassign=Gán lại
 reassign-task=Gán lại Nhiệm vụ (Automatic Translation)
 reassign-to-system-role=Chuyển lại quyền cho vai trò hệ thống
 reassignment=Chỉ định lại (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Xác thực lại (Automatic Translation)
 recalculate=Tính lại
@@ -12895,6 +12896,7 @@ script=Kịch bản (Automatic Translation)
 script-file=Tập tin script
 script-language=Ngôn ngữ Script (Automatic Translation)
 scripted-assignment=Gán theo kịch bản (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Người nhận script (Automatic Translation)
 scroll=Di chuyển (Automatic Translation)
 scrolling=Di chuyển (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Chọn Nhóm Sản phẩm (Automatic Translation)
 select-question=Chọn câu hỏi
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Chọn "Chỉ định lại" để thử lại. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Chọn nơi nhận
 select-region=Chọn Khu vực (Automatic Translation)
 select-role=Chọn Vai trò (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Chọn biểu mẫu gia
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Chọn nhà cung cấp API bản đồ để sử dụng khi hiển thị tài sản được định vị địa lý. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Chọn mức trang của menu điều hướng sẽ được hiển thị. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Chọn loại xếp hạng cho các ứng dụng sau. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Chọn phạm vi của hành động có thể thực hiện theo vai trò của bạn trên các tài nguyên của <em>{0}</em> ứng dụng.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Chọn phạm vi của hành động có thể thực hiện theo vai trò của bạn trên cổng TTĐT.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Chọn phạm vi của hành động có thể thực hiện theo vai trò của bạn trên <em>{0}</em>.
