--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -12053,6 +12053,7 @@ reassign=Znovu přiřadit
 reassign-task=Přeřadit úkol (Automatic Translation)
 reassign-to-system-role=Přiřadit znovu mezi systémové role
 reassignment=opakované přiřazení (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Reaumure (Automatic Translation)
 reauthenticate=Reauthenticate (Automatic Translation)
 recalculate=Přepočítat
@@ -12895,6 +12896,7 @@ script=Skript
 script-file=Soubor se skriptem
 script-language=Jazyk skriptu (Automatic Translation)
 scripted-assignment=Skriptované přiřazení (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptovaný příjemce (Automatic Translation)
 scroll=svitek (Automatic Translation)
 scrolling=rolování (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Vybrat skupinu produktů (Automatic Translation)
 select-question=Vybrat otázku
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Chcete-li akci opakovat, vyberte možnost Přeřadit. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Vybrat příjemce
 select-region=Vybrat oblast (Automatic Translation)
 select-role=Vybrat roli (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Vyberte detailní šabl
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Vyberte poskytovatele rozhraní API map, který se má použít při zobrazení geolokátizovaných datových zdrojů. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Vyberte úroveň stránky navigační nabídky, která se má zobrazit. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Vyberte typ hodnocení pro následující aplikace. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Zvolte rámec akce, kterou smí uživatel s touto rolí provést nad každou entitou spravovanou portletem <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Zvolte rámec akce, kterou smí uživatel s touto rolí provést nad portálem.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Zvolte rámec akce, kterou smí uživatel s touto rolí provést nad <em>{0}</em>.
