--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -12053,6 +12053,7 @@ reassign=Määra ümber (Automatic Translation)
 reassign-task=Määra tööülesanne ümber (Automatic Translation)
 reassign-to-system-role=Määra ümber süsteemirollile (Automatic Translation)
 reassignment=Ümbermääramine (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Reauthenticate (Automatic Translation)
 recalculate=Arvuta (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Skript
 script-file=Skriptifail (Automatic Translation)
 script-language=Skripti keel (Automatic Translation)
 scripted-assignment=Skriptitud määramine (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Skriptitud adressaat (Automatic Translation)
 scroll=Liikuge (Automatic Translation)
 scrolling=Kerimine (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Kuva algne ingliskeelne artikkel: 311 (Automatic Translatio
 select-question=Vali küsimus (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Uuesti proovimiseks valige Määra ümber. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Vali saajad
 select-region=Vali piirkond (Automatic Translation)
 select-role=Vali roll (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Valige loendisse kirjet
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Valige kaartide API pakkuja, mida kasutada geolokaliseeritud varade kuvamisel. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Valige kuvatava navigeerimismenüü leheküljetase. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Valige järgmiste rakenduste hinnangutüüp. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Vali tegevuse skoop, mida antud roll saab täita <em>{0}</em> portleti iga ressursi puhul.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Vali tegevuse skoop, mida antud roll saab täita portaali puhul.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Vali tegevuse skoop, mida antud roll saab täita <em>{0}</em> puhul.
