--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -12053,6 +12053,7 @@ reassign=Berresleitu
 reassign-task=Reassign Task (Automatic Copy)
 reassign-to-system-role=Sistema rolari berresleitu
 reassignment=Reassignment (Automatic Copy)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Copy)
 reauthenticate=Reauthenticate (Automatic Copy)
 recalculate=Berkalkulatu
@@ -12895,6 +12896,7 @@ script=Scripta
 script-file=Script File (Automatic Copy)
 script-language=Script Language (Automatic Copy)
 scripted-assignment=Scripted Assignment (Automatic Copy)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scripted Recipient (Automatic Copy)
 scroll=Scroll (Automatic Copy)
 scrolling=Scrolling (Automatic Copy)
@@ -13214,6 +13216,7 @@ select-product-group=Select Product Group (Automatic Copy)
 select-question=Aukeratu Galdera
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Select 'Reassign' to retry. (Automatic Copy)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Aukeratu hartzaileak
 select-region=Select Region (Automatic Copy)
 select-role=Select Role (Automatic Copy)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Hautatu zerrendara elem
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Select the maps API provider to use when displaying geolocalized assets. (Automatic Copy)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Select the page level of the navigation menu to be displayed. (Automatic Copy)
 select-the-ratings-type-for-the-following-applications=Select the ratings type for the following applications. (Automatic Copy)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Aukeratu <em>{0}</em> portleteko baliabide bakoitzean rol honek baimentzen duen ekintza eremua.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Aukeratu rol honek atarian egin dezakeen ekintza esparrua.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Aukeratu rol honek <em>{0}</em>-an egin dezakeen ekintza esparrua.
