--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -12053,6 +12053,7 @@ reassign=Reasignar
 reassign-task=Reassign Task (Automatic Copy)
 reassign-to-system-role=Reasignar a rol do sistema
 reassignment=Reassignment (Automatic Copy)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure
 reauthenticate=Reauthenticate (Automatic Copy)
 recalculate=Recalcular
@@ -12895,6 +12896,7 @@ script=Script
 script-file=Ficheiro de script
 script-language=Script Language (Automatic Copy)
 scripted-assignment=Scripted Assignment (Automatic Copy)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scripted Recipient (Automatic Copy)
 scroll=Desprazamento
 scrolling=Desprazamento
@@ -13214,6 +13216,7 @@ select-product-group=Select Product Group (Automatic Copy)
 select-question=Select Question (Automatic Copy)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Select 'Reassign' to retry. (Automatic Copy)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Seleccionar destinatarios
 select-region=Select Region (Automatic Copy)
 select-role=Seleccionar rol
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Selecciona o modelo de 
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Select the maps API provider to use when displaying geolocalized assets. (Automatic Copy)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Select the page level of the navigation menu to be displayed. (Automatic Copy)
 select-the-ratings-type-for-the-following-applications=Select the ratings type for the following applications. (Automatic Copy)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Selecciona o alcance da acción que este rol permite levar a cabo en cada recurso do portlet <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Selecciona o alcance da acción que este rol permite levar a cabo en cada recurso do portal.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Selecciona o alcance da acción que este rol pode levar a cabo en <em>{0}</em>.
