--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -12053,6 +12053,7 @@ reassign=Pemerintahan Semula (Automatic Translation)
 reassign-task=Tugas Tugas Tugasan Semula (Automatic Translation)
 reassign-to-system-role=Tugaskan semula kepada Peranan Sistem (Automatic Translation)
 reassignment=Penugasan Semula (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Translation)
 reauthenticate=Tidak sahih semula (Automatic Translation)
 recalculate=Kitar Semula (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Skrip (Automatic Translation)
 script-file=Fail Skrip (Automatic Translation)
 script-language=Bahasa Skrip (Automatic Translation)
 scripted-assignment=Tugasan Berskrip (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Penerima Berskrip (Automatic Translation)
 scroll=Tatal (Automatic Translation)
 scrolling=Menatal (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Pilih Kumpulan Produk (Automatic Translation)
 select-question=Pilih Soalan (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Pilih 'Reassign' untuk cuba semula. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Pilih Penerima (Automatic Translation)
 select-region=Pilih Rantau (Automatic Translation)
 select-role=Pilih Peranan (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Pilih templat borang ya
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Pilih pembekal API peta untuk digunakan apabila memaparkan aset geolocalized. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Pilih aras halaman menu navigasi untuk dipaparkan. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Pilih jenis pengkadaran untuk aplikasi berikut. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Select the scope of the action that this role can perform on each resource of the <em>{0}</em> portlet. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Pilih skop tindakan yang boleh dilaksanakan oleh peranan ini di portal. (Automatic Translation)
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Select the scope of the action that this role can perform on the <em>{0}</em>. (Automatic Copy)
