--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -12053,6 +12053,7 @@ reassign=Переназначить
 reassign-task=Переназначение задачи (Automatic Translation)
 reassign-to-system-role=Переназначить на системную роль
 reassignment=Переназначения (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Реаумюр (Automatic Translation)
 reauthenticate=Реаутентика (Automatic Translation)
 recalculate=Перерасчитать
@@ -12895,6 +12896,7 @@ script=Скрипт
 script-file=Файл скрипта
 script-language=Язык скриптов (Automatic Translation)
 scripted-assignment=Сценарные задания (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Получатель сценария (Automatic Translation)
 scroll=свиток (Automatic Translation)
 scrolling=прокрутка (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Выберите группу продуктов (Automatic
 select-question=Выберите вопрос
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Выберите 'Reassign' для повторной попытки. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Выберите получателей
 select-region=Выберите регион (Automatic Translation)
 select-role=Выберите роль (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Выберите шаб
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Выберите поставщика API карт для использования при отображении геолокализованных активов. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Выберите уровень страницы навигационного меню для отображения. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Выберите тип оценок для следующих приложений. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Выберите набор действий, который может выполнять эта роль над каждым ресурсом приложения <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Выберите набор действий, который может выполнять эта роль в портале.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Выберите набор действий, который может выполнять эта роль над <em>{0}</em>.
