--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -12053,6 +12053,7 @@ reassign=Поново Додели
 reassign-task=Reassign Task (Automatic Copy)
 reassign-to-system-role=Распоредити на Систем Улога
 reassignment=Reassignment (Automatic Copy)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Réaumure (Automatic Copy)
 reauthenticate=Reauthenticate (Automatic Copy)
 recalculate=Поново Израчунај
@@ -12895,6 +12896,7 @@ script=Скрипта
 script-file=Script File (Automatic Copy)
 script-language=Script Language (Automatic Copy)
 scripted-assignment=Scripted Assignment (Automatic Copy)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Scripted Recipient (Automatic Copy)
 scroll=Scroll (Automatic Copy)
 scrolling=Scrolling (Automatic Copy)
@@ -13214,6 +13216,7 @@ select-product-group=Select Product Group (Automatic Copy)
 select-question=Изаберите Питање
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Select 'Reassign' to retry. (Automatic Copy)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Изаберите Примаоца
 select-region=Select Region (Automatic Copy)
 select-role=Select Role (Automatic Copy)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Изаберите де
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Select the maps API provider to use when displaying geolocalized assets. (Automatic Copy)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Select the page level of the navigation menu to be displayed. (Automatic Copy)
 select-the-ratings-type-for-the-following-applications=Select the ratings type for the following applications. (Automatic Copy)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Изаберите опсег деловања те улоге може обављати на сваки ресурс <em>{0}</em> портлета.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Изаберите опсег активности које могу да ту улогу обављављају на порталу.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Изаберите опсег деловања те улоге ово може обављати на <em>{0}</em>.
