--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -12053,6 +12053,7 @@ reassign=Atamak (Automatic Translation)
 reassign-task=Görevi Yeniden Ata (Automatic Translation)
 reassign-to-system-role=Sistem Rolüne Yeniden Ata (Automatic Translation)
 reassignment=Yeniden Atama (Automatic Translation)
+reassignment-type=Reassignment Type (Automatic Copy)
 reaumure=Özgeçmiş (Automatic Translation)
 reauthenticate=Yeniden authenticate (Automatic Translation)
 recalculate=Yeniden hesapla (Automatic Translation)
@@ -12895,6 +12896,7 @@ script=Script(Betik)
 script-file=Komut Dosyası (Automatic Translation)
 script-language=Komut Dosyası Dili (Automatic Translation)
 scripted-assignment=Komut Dosyası Ataması (Automatic Translation)
+scripted-reassignment=Scripted Reassignment (Automatic Copy)
 scripted-recipient=Komut Dosyası Alıcısı (Automatic Translation)
 scroll=tomar (Automatic Translation)
 scrolling=Kaydırma (Automatic Translation)
@@ -13214,6 +13216,7 @@ select-product-group=Ürün Grubu Seçin (Automatic Translation)
 select-question=Soru Seç (Automatic Translation)
 select-radius=Select Radius (Automatic Copy)
 select-reassign-to-retry=Yeniden denemek için 'Yeniden Ata'yı seçin. (Automatic Translation)
+select-reassignment=Select Reassignment (Automatic Copy)
 select-recipients=Alcıları Seç
 select-region=Bölge Seç (Automatic Translation)
 select-role=Rol Seç (Automatic Translation)
@@ -13249,6 +13252,7 @@ select-the-form-template-used-to-add-records-to-the-list=Listeye kayıt eklemek 
 select-the-maps-api-provider-to-use-when-displaying-geolocalized-assets=Coğrafi konumlandırılmış varlıkları görüntülerken kullanılacak haritalar API sağlayıcısını seçin. (Automatic Translation)
 select-the-page-level-of-the-navigation-menu-to-be-displayed=Görüntülenecek gezinti menüsünün sayfa düzeyini seçin. (Automatic Translation)
 select-the-ratings-type-for-the-following-applications=Aşağıdaki uygulamalar için derecelendirme türünü seçin. (Automatic Translation)
+select-the-reassignment-type=Select the reassignment type. (Automatic Copy)
 select-the-scope-of-the-action-that-this-role-can-perform-on-each-resource-of-x-portlet=Bu rölün <em>{0}</em> portletinin her bir kaynağı üzerinde yürütebileceği faaliyetlerin çerçevesini/alanını seç.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Bu rölün portal üzerinde yürütebileceği faaliyetlerin çerçevesini/alanını seç.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Bu rölün <em>{0}</em> üzerinde yürütebileceği faaliyetlerin çerçevesini/alanını seç.
